--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start --env REACT_APP_API_KEY=$REACT_APP_API_KEY",
+    "build": "react-scripts build --env REACT_APP_API_KEY=$REACT_APP_API_KEY",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
